--- a/Impilo App/Views/Client/AddNewClient.xaml
+++ b/Impilo App/Views/Client/AddNewClient.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Impilo_App.Views.Client"
+              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
               xmlns:sys="clr-namespace:System;assembly=mscorlib" 
              mc:Ignorable="d" 
              d:DesignHeight="548" d:DesignWidth="1119">
@@ -30,68 +31,59 @@
                     </LinearGradientBrush>
                 </Border.BorderBrush>
                 <Grid x:Name="grid4" Margin="6,18,6,6">
-                    <Label Content="Head of household" Height="28" HorizontalAlignment="Left" Margin="21,60,0,0" x:Name="label12_Copy" VerticalAlignment="Top" FontWeight="Bold" />
-                    <Label Content="Biographical Details" Height="49" HorizontalAlignment="Left" Margin="21,-9,0,0" x:Name="label1_Copy" VerticalAlignment="Top" FontSize="28" FontWeight="Bold" />
-                    <Label Content="Name" Height="28" HorizontalAlignment="Left" Margin="21,106,0,0" x:Name="label2_Copy" VerticalAlignment="Top" FontWeight="Bold" />
-                    <Label Content="Surname" Height="28" HorizontalAlignment="Left" Margin="21,146,0,0" x:Name="label3_Copy" VerticalAlignment="Top" FontWeight="Bold" />
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="46*"/>
+                        <RowDefinition Height="46*"/>
+                        <RowDefinition Height="44*"/>
+                        <RowDefinition Height="37*"/>
+                        <RowDefinition Height="47*"/>
+                        <RowDefinition Height="45*"/>
+                        <RowDefinition Height="54*"/>
+                        <RowDefinition Height="65*"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="139*"/>
+                        <ColumnDefinition Width="327*"/>
+                        <ColumnDefinition Width="185*"/>
+                        <ColumnDefinition Width="300*"/>
+                    </Grid.ColumnDefinitions>
+                    <Label Content="Head of household" Height="28" HorizontalAlignment="Left" Margin="21,14,0,0" x:Name="label12_Copy" VerticalAlignment="Top" FontWeight="Bold" Grid.Row="1" />
+                    <Label Content="Biographical Details" Height="49" HorizontalAlignment="Left" Margin="21,-9,0,0" x:Name="label1_Copy" VerticalAlignment="Top" FontSize="28" FontWeight="Bold" Grid.ColumnSpan="2" />
+                    <Label Content="Name" Height="28" HorizontalAlignment="Left" Margin="21,14,0,0" x:Name="label2_Copy" VerticalAlignment="Top" FontWeight="Bold" Grid.Row="2" />
+                    <Label Content="Surname" Height="28" HorizontalAlignment="Left" Margin="21,10,0,0" x:Name="label3_Copy" VerticalAlignment="Top" FontWeight="Bold" Grid.Row="3" Grid.RowSpan="2" />
 
-                    <RadioButton Content="Yes" HorizontalAlignment="Left" Name="radioHHYes" Margin="146,65,0,0" GroupName="Head" VerticalAlignment="Top"/>
-                    <RadioButton Content="No" HorizontalAlignment="Left" Name="radioHHNo" Margin="240,65,0,0" GroupName="Head" VerticalAlignment="Top"/>
+                    <RadioButton Content="Yes" HorizontalAlignment="Left" Name="radioHHYes" Margin="7,19,0,0" GroupName="Head" VerticalAlignment="Top" Grid.Row="1" Grid.Column="1"/>
+                    <RadioButton Content="No" HorizontalAlignment="Left" Name="radioHHNo" Margin="101,19,0,0" GroupName="Head" VerticalAlignment="Top" Grid.Row="1" Grid.Column="1"/>
 
-                    <TextBox Height="23" HorizontalAlignment="Left" Margin="146,106,0,0" x:Name="txtFirstName" VerticalAlignment="Top" Width="253" />
-                    <TextBox Height="23" HorizontalAlignment="Left" Margin="146,146,0,0" x:Name="txtLastName" VerticalAlignment="Top" Width="253" />
-                    <Label Content="GPS Latitute" Height="28" HorizontalAlignment="Left" Margin="20,183,0,0" x:Name="label1_Copy1" VerticalAlignment="Top" FontWeight="Bold" />
-                    <Label Content="GPS Longitude" Height="28" HorizontalAlignment="Left" Margin="20,230,0,0" x:Name="label2_Copy1" VerticalAlignment="Top" FontWeight="Bold" />
-                    <TextBox Height="23" HorizontalAlignment="Left" Margin="146,183,0,0" x:Name="txtLatitude" VerticalAlignment="Top" Width="253" />
-                    <TextBox Height="23" HorizontalAlignment="Left" Margin="146,230,0,0" x:Name="txtLongitude" VerticalAlignment="Top" Width="253" />
-                    <Label Content="ID No" Height="28" HorizontalAlignment="Left" Margin="21,280,0,0" x:Name="label1_Copy2" VerticalAlignment="Top" FontWeight="Bold" />
-                    <Label Content="Clinic used" Height="28" HorizontalAlignment="Left" Margin="487,53,0,0" x:Name="label2_Copy2" VerticalAlignment="Top" FontWeight="Bold" />
-                    <TextBox Height="23" HorizontalAlignment="Left" Margin="146,280,0,0" x:Name="txtIDNo" VerticalAlignment="Top" Width="253" />
-                    <Label Content="Date of birth" Height="28" HorizontalAlignment="Left" Margin="487,101,0,0" x:Name="label1_Copy3" VerticalAlignment="Top" FontWeight="Bold" />
-                    <Label Content="Gender" Height="28" HorizontalAlignment="Left" Margin="487,136,0,0" x:Name="label2_Copy3" VerticalAlignment="Top" FontWeight="Bold" />
+                    <TextBox Height="23" HorizontalAlignment="Left" Margin="7,14,0,0" x:Name="txtFirstName" VerticalAlignment="Top" Width="253" Grid.Row="2" Grid.Column="1" />
+                    <TextBox Height="23" HorizontalAlignment="Left" Margin="7,10,0,0" x:Name="txtLastName" VerticalAlignment="Top" Width="253" Grid.Row="3" Grid.Column="1" />
+                    <Label Content="GPS Latitute" Height="28" HorizontalAlignment="Left" Margin="20,10,0,0" x:Name="label1_Copy1" VerticalAlignment="Top" FontWeight="Bold" Grid.Row="4" />
+                    <Label Content="GPS Longitude" Height="28" HorizontalAlignment="Left" Margin="20,10,0,0" x:Name="label2_Copy1" VerticalAlignment="Top" FontWeight="Bold" Grid.Row="5" />
+                    <TextBox Height="23" HorizontalAlignment="Left" Margin="7,10,0,0" x:Name="txtLatitude" VerticalAlignment="Top" Width="253" Grid.Row="4" Grid.Column="1" />
+                    <TextBox Height="23" HorizontalAlignment="Left" Margin="7,10,0,0" x:Name="txtLongitude" VerticalAlignment="Top" Width="253" Grid.Row="5" Grid.Column="1" />
+                    <Label Content="ID No" Height="28" HorizontalAlignment="Left" Margin="21,15,0,0" x:Name="label1_Copy2" VerticalAlignment="Top" FontWeight="Bold" Grid.Row="6" />
+                    <Label Content="Clinic used" Height="28" HorizontalAlignment="Left" Margin="21,7,0,0" x:Name="label2_Copy2" VerticalAlignment="Top" FontWeight="Bold" Grid.Column="2" Grid.Row="1" />
 
-                    <DatePicker  x:Name="txtDateofBirth" VerticalAlignment="Top" Height="23" Width="253" HorizontalAlignment="Left" Margin="658,106,0,0" SelectedDate="{x:Static sys:DateTime.Today}"/>
-                    <RadioButton Content="Male" HorizontalAlignment="Left" Name="radioMale" Margin="658,141,0,0" GroupName="gender" VerticalAlignment="Top"/>
-                    <RadioButton Content="Female" HorizontalAlignment="Left" Name="radioFemale" Margin="751,144,0,0" GroupName="gender" VerticalAlignment="Top"/>
-                    <Label Content="Currently attending school?" Height="28" HorizontalAlignment="Left" Margin="487,188,0,0" x:Name="label1_Copy4" VerticalAlignment="Top" FontWeight="Bold" />
-                    <Label Content="Name of school" Height="28" HorizontalAlignment="Left" Margin="487,230,0,0" x:Name="label2_Copy4" VerticalAlignment="Top" FontWeight="Bold" />
-                    <RadioButton Content="Yes" HorizontalAlignment="Left" Name="radioAttYes" Margin="658,195,0,0" GroupName="attendance" VerticalAlignment="Top"/>
-                    <RadioButton Content="No" HorizontalAlignment="Left" Name="radioAttNo" Margin="774,198,0,0" GroupName="attendance" VerticalAlignment="Top"/>
+                    <xctk:MaskedTextBox x:Name="txtIDNo" Margin="7,15,67,11" Mask="0000000000000" Height="28" Width="253" ValueDataType="{x:Type sys:String}" Grid.Row="6" Grid.Column="1"/>
+                    <Label Content="Date of birth" Height="28" HorizontalAlignment="Left" Margin="21,9,0,0" x:Name="label1_Copy3" VerticalAlignment="Top" FontWeight="Bold" Grid.Column="2" Grid.Row="2" />
+                    <Label Content="Gender" Height="28" HorizontalAlignment="Left" Margin="21,0,0,0" x:Name="label2_Copy3" VerticalAlignment="Top" FontWeight="Bold" Grid.Column="2" Grid.Row="3" />
 
-                    <Label Content="Grade" Height="28" HorizontalAlignment="Left" Margin="487,280,0,0" x:Name="label1_Copy5" VerticalAlignment="Top" FontWeight="Bold" />
-                    <ComboBox HorizontalAlignment="Left" Margin="658,284,0,0" VerticalAlignment="Top" Name="Grade" Width="253">
-                        <ComboBoxItem ContentStringFormat="Name"/>
+                    <DatePicker  x:Name="txtDateofBirth" VerticalAlignment="Top" Height="25" Width="253" HorizontalAlignment="Left" Margin="7,14,0,0" SelectedDate="{x:Static sys:DateTime.Today}" Grid.Column="3" Grid.Row="2"/>
+                    <RadioButton Content="Male" HorizontalAlignment="Left" Name="radioMale" Margin="7,8,0,0" GroupName="gender" VerticalAlignment="Top" Grid.Column="3" Grid.Row="3"/>
+                    <RadioButton Content="Female" HorizontalAlignment="Left" Name="radioFemale" Margin="100,8,0,0" GroupName="gender" VerticalAlignment="Top" Grid.Column="3" Grid.Row="3"/>
+                    <Label Content="Currently attending school?" Height="28" HorizontalAlignment="Left" Margin="21,15,0,0" x:Name="label1_Copy4" VerticalAlignment="Top" FontWeight="Bold" Grid.Column="2" Grid.Row="4" Grid.ColumnSpan="2" />
+                    <Label Content="Name of school" Height="28" HorizontalAlignment="Left" Margin="21,10,0,0" x:Name="label2_Copy4" VerticalAlignment="Top" FontWeight="Bold" Grid.Column="2" Grid.Row="5" />
+                    <RadioButton Content="Yes" HorizontalAlignment="Left" Name="radioAttYes" Margin="7,22,0,0" GroupName="attendance" VerticalAlignment="Top" Grid.Column="3" Grid.Row="4" Checked="radioAttNo_Checked"/>
+                    <RadioButton Content="No" HorizontalAlignment="Left" Name="radioAttNo" Margin="101,23,0,0" GroupName="attendance" VerticalAlignment="Top" Grid.Column="3" Grid.Row="4" Checked="radioAttNo_Checked"/>
 
-                        <ComboBoxItem Name="gr">Grade R</ComboBoxItem>
-                        <ComboBoxItem Name="g1">Grade 1</ComboBoxItem>
-                        <ComboBoxItem Name="g2">Grade 2</ComboBoxItem>
-                        <ComboBoxItem Name="g3">Grade 3</ComboBoxItem>
-                        <ComboBoxItem Name="g4">Grade 4</ComboBoxItem>
-                        <ComboBoxItem Name="g5">Grade 5</ComboBoxItem>
-                        <ComboBoxItem Name="g6">Grade 6</ComboBoxItem>
-                        <ComboBoxItem Name="g7">Grade 7</ComboBoxItem>
-                        <ComboBoxItem Name="g8">Grade 8</ComboBoxItem>
-                        <ComboBoxItem Name="g9">Grade 9</ComboBoxItem>
-                        <ComboBoxItem Name="g10">Grade 10</ComboBoxItem>
-                        <ComboBoxItem Name="g11">Grade 11</ComboBoxItem>
-                        <ComboBoxItem Name="g12">Grade 12</ComboBoxItem>
-                        <ComboBoxItem Name="gother">Other</ComboBoxItem>
+                    <Label Content="Grade" Height="28" HorizontalAlignment="Left" Margin="21,15,0,0" x:Name="label1_Copy5" VerticalAlignment="Top" FontWeight="Bold" Grid.Column="2" Grid.Row="6" />
+                    <ComboBox HorizontalAlignment="Left" Margin="7,19,0,0" VerticalAlignment="Top" Name="Grade" Width="253" Grid.Column="3" Grid.Row="6" ItemsSource="{Binding Grade}" SelectedIndex="14">
+                        
                     </ComboBox>
 
-                    <ComboBox HorizontalAlignment="Left" Margin="658,234,0,0" Name="NameofSchool" VerticalAlignment="Top" Width="253">
-                        <ComboBoxItem ContentStringFormat="Name"/>
-                        <ComboBoxItem Name="s1">Elliotdale Tech SSS</ComboBoxItem>
-                        <ComboBoxItem Name="s2">Ngonyama JP</ComboBoxItem>
-                        <ComboBoxItem Name="s3">Elliotdale Village JS</ComboBoxItem>
-                        <ComboBoxItem Name="s4">Kalalo JS</ComboBoxItem>
-                        <ComboBoxItem Name="s5">Bacela PJS</ComboBoxItem>
-                        <ComboBoxItem Name="s6">Mzomhle JS</ComboBoxItem>
-                        <ComboBoxItem Name="s7">Futye JS</ComboBoxItem>
-                        <ComboBoxItem Name="s8">Melithafa JS</ComboBoxItem>
-                        <ComboBoxItem Name="s9">Other</ComboBoxItem>
-
-                    </ComboBox>
-                    <Button Content="Add" Height="36" HorizontalAlignment="Left" Margin="729,328,0,0" x:Name="btnAddCountry" VerticalAlignment="Top" Width="182" FontSize="16" FontWeight="Bold" Click="btnAddCountry_Click" >
+                    <ComboBox HorizontalAlignment="Left" Margin="7,14,0,0" Name="NameofSchool" VerticalAlignment="Top" Width="253" Grid.Column="3" Grid.Row="5" ItemsSource="{Binding SchoolName}" SelectedItem="{Binding SelectedSchool}" SelectedIndex="9" />
+                       
+                    <Button Content="Add" Height="36" HorizontalAlignment="Left" Margin="78,9,0,0" x:Name="btnAddCountry" VerticalAlignment="Top" Width="182" FontSize="16" FontWeight="Bold" Click="btnAddCountry_Click" Grid.Column="3" Grid.Row="7" >
                         <Button.Background>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                                 <GradientStop Color="#82000000" Offset="0.035" />
@@ -103,7 +95,7 @@
                             </LinearGradientBrush>
                         </Button.Background>
                     </Button>
-                    <ComboBox HorizontalAlignment="Left" Margin="658,57,0,0" Name="ClinicUsed" DisplayMemberPath="ClinicName" SelectedValuePath="ClinicID" VerticalAlignment="Top" Width="253"/>
+                    <ComboBox HorizontalAlignment="Left" Margin="7,11,0,0" Name="ClinicUsed" DisplayMemberPath="ClinicName" SelectedValuePath="ClinicID" VerticalAlignment="Top" Width="253" Grid.Column="3" Grid.Row="1"/>
 
                 </Grid>
             </Border>
